@startuml

hide empty methods
hide empty attributes
'left to right direction
skinparam classAttributeIconSize 0

class ShipOccupancyRatesController{
- company
- calculateOccupancyRate(maxCapacity, initialNumContainers, alreadyAddedRemovedContainersTripNum)
- getShipOccupancyRateByCargoManifestID(cargoManifestID)
}

class ShipStoreDB{
- getShipCargo(cargoManifestID)
}

class ShipTripStoreDB{
- getAddedRemovedContainersShipTripMoment(cargoManifestID)
- getEstDepartureDateFromShipTrip(cargoManifestID)
- getInitialNumContainersPerShipTrip(cargoManifestID,estDepartureDate)
}

class CargoManifestStoreDB{
- getNumContainersPerCargoManifest(cargoManifestID)
}

class Company{
- shipStoreDB
- shipTripStoreDB
- cargoManifestStoreDB
- getShipTripStoreDB()
- getShipStoreDB()
- getCargoManifestStoreDB()
}

ShipOccupancyRatesController ..> Company
ShipOccupancyRatesController ..> ShipStoreDB
ShipOccupancyRatesController ..> ShipTripStoreDB
ShipOccupancyRatesController ..> CargoManifestStoreDB
Company "1" -- "1" ShipStoreDB : uses >
Company "1" -- "1" ShipTripStoreDB : uses >
Company "1" -- "1" CargoManifestStoreDB : uses >

@enduml